# 3d-object-reconstruction-kinect

./: index.html  params.json
misc/: 5_extract_cluster.cpp  6_initial_aligned_cluster.cpp  7_final_aligned_cluster.cpp
src/: 10_alignment.cpp  11_cloud_smoothing.cpp  12_generate_surface.cpp  1_get_input.cpp  2_filter_depth.cpp  3_downsample_depth.cpp  4_outlier_free_depth.cpp  5_remove_background.cpp  6_extract_cluster.cpp  7_estimate_surface_normals.cpp  8_detect_keypoints.cpp  9_compute_local_descriptors.cpp  CMakeLists.txt
